--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
+		"@types/react-redux": "^7.1.34",
 		"@types/uuid": "^10.0.0",
 		"gh-pages": "^6.1.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-redux": "^9.1.2",
 		"react-scripts": "5.0.1",
+		"redux": "^5.0.1",
 		"typescript": "^4.4.2",
 		"uuid": "^10.0.0",
 		"web-vitals": "^2.1.0"
